// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`poker close diverter during deal 1`] = `
Object {
  "outputs": Object {
    "centerBank": false,
    "getSkillshot": [Function],
    "iCenter1": "8H",
    "iCenter2": "QS",
    "iCenter3": "QD",
    "iLeft1": "AH",
    "iLeft2": "JD",
    "iLeft3": "QH",
    "iLeft4": "7S",
    "iMini1": "5C",
    "iMini2": "7D",
    "iMini3": "10H",
    "iRight1": "KH",
    "iRight2": "7H",
    "iRight3": "JS",
    "iRight4": "5D",
    "iRight5": "6S",
    "iSS1": Object {
      "fill": [Function],
    },
    "iSS2": Object {
      "fill": [Function],
    },
    "iSS3": Object {
      "fill": [Function],
    },
    "iSS4": Object {
      "fill": [Function],
    },
    "iSS5": Object {
      "fill": [Function],
    },
    "iSS6": Object {
      "fill": [Function],
    },
    "iSS7": Object {
      "fill": [Function],
    },
    "iSpinner": "",
    "iUpper21": "JH",
    "iUpper22": "7C",
    "iUpper31": "10C",
    "iUpper32": "5H",
    "iUpper33": "9H",
    "ignoreSkillsot": Set {},
    "kickerEnable": true,
    "lEjectArrow": Array [],
    "lEjectShowCards": Array [],
    "lEjectStartMode": Array [],
    "lLaneUpper1": Array [
      "Orange",
    ],
    "lLaneUpper2": Array [],
    "lLaneUpper3": Array [],
    "lLaneUpper4": Array [],
    "lLeftArrow": Array [],
    "lLowerRamp": Array [],
    "lMagnaSaveStatus": Array [
      "Green",
    ],
    "lMainTargetArrow": Array [],
    "lMiniReady": Array [
      "Green",
    ],
    "lPopperStatus": Array [
      "Green",
    ],
    "lPower1": Array [
      "Orange",
    ],
    "lPower2": Array [
      "Orange",
    ],
    "lPower3": Array [
      "Orange",
    ],
    "lPower4": Array [
      "Orange",
    ],
    "lRampArrow": Array [],
    "lRampShowCards": Array [],
    "lRampStartMb": Array [],
    "lShooterLaneArrow": Array [],
    "lShooterShowCards": Array [],
    "lShooterStartHand": Array [],
    "lSideShotArrow": Array [],
    "lSideTargetArrow": Array [],
    "lSpinnerArrow": Array [],
    "lUpperLaneArrow": Array [],
    "lUpperTargetArrow": Array [],
    "leftBank": false,
    "leftGate": false,
    "leftMagnet": false,
    "lockPost": false,
    "magnetPost": false,
    "miniBank": false,
    "miniDiverter": false,
    "miniEject": false,
    "miniFlipperEnable": false,
    "outhole": false,
    "popper": false,
    "rampUp": true,
    "realRightBank": false,
    "right1": false,
    "right2": false,
    "right3": false,
    "right4": false,
    "right5": false,
    "rightBank": false,
    "rightGate": false,
    "shooterDiverter": true,
    "troughRelease": false,
    "upper2": false,
    "upper3": false,
    "upperEject": false,
    "upperMagnet": false,
  },
  "state": Object {
    "children": Array [
      Object {
        "children": Array [],
        "name": "DropBank65",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank66",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank67",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank68",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank69",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank70",
        "state": Object {},
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "name": "EosPulse72",
            "state": Object {},
          },
        ],
        "name": "MachineOverrides71",
        "state": Object {},
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "name": "ClearHoles75",
                "state": Object {},
              },
              Object {
                "children": Array [],
                "name": "Spinner77",
                "state": Object {
                  "comboMult": 1,
                  "rounds": 0,
                  "score": 300,
                },
              },
              Object {
                "children": Array [],
                "name": "LeftOrbit78",
                "state": Object {
                  "comboMult": 1,
                  "rounds": 1,
                  "score": 20000,
                },
              },
              Object {
                "children": Array [],
                "name": "PlayerOverrides79",
                "state": Object {},
              },
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter82",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter83",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter84",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter85",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter86",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter87",
                        "state": Object {},
                      },
                    ],
                    "name": "ResetAnyDropOnComplete81",
                    "state": Object {},
                  },
                  Object {
                    "children": Array [],
                    "name": "Skillshot93",
                    "state": Object {
                      "curAward": 0,
                      "shooterOpen": true,
                    },
                  },
                ],
                "name": "Ball80",
                "state": Object {
                  "miniReady": true,
                },
              },
              Object {
                "children": Array [],
                "name": "Poker92",
                "state": Object {
                  "bet": 100,
                  "closeShooter": false,
                  "dealerCardsUsed": Array [],
                  "dealerHand": Array [
                    Object {
                      "flipped": true,
                      "num": 3,
                      "suit": "d",
                    },
                    Object {
                      "flipped": true,
                      "num": 6,
                      "suit": "h",
                    },
                    null,
                    null,
                    null,
                    null,
                    null,
                  ],
                  "dealerHandDesc": undefined,
                  "newMbs": Array [],
                  "newModes": Array [],
                  "playerCardsUsed": Array [],
                  "playerHand": Array [
                    Object {
                      "num": 3,
                      "suit": "h",
                    },
                    Object {
                      "num": 1,
                      "suit": "d",
                    },
                    null,
                    null,
                    null,
                    null,
                    null,
                  ],
                  "playerHandDesc": undefined,
                  "playerWins": undefined,
                  "pot": 0,
                  "slots": Array [
                    Object {
                      "num": 8,
                      "suit": "h",
                    },
                    Object {
                      "num": 12,
                      "suit": "s",
                    },
                    Object {
                      "num": 12,
                      "suit": "d",
                    },
                    Object {
                      "num": 13,
                      "suit": "h",
                    },
                    Object {
                      "num": 7,
                      "suit": "h",
                    },
                    Object {
                      "num": 11,
                      "suit": "s",
                    },
                    Object {
                      "num": 5,
                      "suit": "d",
                    },
                    Object {
                      "num": 6,
                      "suit": "s",
                    },
                    Object {
                      "num": 1,
                      "suit": "h",
                    },
                    Object {
                      "num": 11,
                      "suit": "d",
                    },
                    Object {
                      "num": 12,
                      "suit": "h",
                    },
                    Object {
                      "num": 7,
                      "suit": "s",
                    },
                    Object {
                      "num": 11,
                      "suit": "h",
                    },
                    Object {
                      "num": 7,
                      "suit": "c",
                    },
                    Object {
                      "num": 10,
                      "suit": "c",
                    },
                    Object {
                      "num": 5,
                      "suit": "h",
                    },
                    Object {
                      "num": 9,
                      "suit": "h",
                    },
                    Object {
                      "num": 5,
                      "suit": "c",
                    },
                    Object {
                      "num": 7,
                      "suit": "d",
                    },
                    Object {
                      "num": 10,
                      "suit": "h",
                    },
                  ],
                  "step": 2,
                },
              },
            ],
            "name": "Player74",
            "state": Object {
              "chips": 4,
              "closeShooter": false,
              "curMbMode": undefined,
              "laneChips": Array [
                true,
                false,
                false,
                false,
              ],
              "mbsQualified": Array [],
              "modesQualified": Array [],
              "noMode": undefined,
              "poker": "Poker92",
              "rampUp": true,
              "score": 31000,
            },
          },
        ],
        "name": "Game73",
        "state": Object {
          "ballNum": 1,
        },
      },
    ],
    "name": "Machine64",
    "state": Object {
      "lastSwitchHit": Switch {
        "_state": true,
        "column": 4,
        "lastChange": 11863,
        "lastClosed": 11863,
        "lastOpened": undefined,
        "minOffTime": 150,
        "minOnTime": 10,
        "name": "right 2",
        "row": 2,
      },
      "lockDown": false,
      "miniDown": false,
    },
  },
}
`;

exports[`poker dont eject during cards 1`] = `
Object {
  "outputs": Object {
    "centerBank": false,
    "getSkillshot": [Function],
    "iCenter1": "",
    "iCenter2": "",
    "iCenter3": "",
    "iLeft1": "",
    "iLeft2": "",
    "iLeft3": "",
    "iLeft4": "",
    "iMini1": "",
    "iMini2": "",
    "iMini3": "",
    "iRight1": "",
    "iRight2": "",
    "iRight3": "",
    "iRight4": "",
    "iRight5": "",
    "iSS1": "",
    "iSS2": "",
    "iSS3": "",
    "iSS4": "",
    "iSS5": "",
    "iSS6": "",
    "iSS7": "",
    "iSpinner": "",
    "iUpper21": "",
    "iUpper22": "",
    "iUpper31": "",
    "iUpper32": "",
    "iUpper33": "",
    "ignoreSkillsot": Set {},
    "kickerEnable": true,
    "lEjectArrow": Array [],
    "lEjectShowCards": Array [
      "White",
    ],
    "lEjectStartMode": Array [],
    "lLaneUpper1": Array [
      "Orange",
    ],
    "lLaneUpper2": Array [],
    "lLaneUpper3": Array [],
    "lLaneUpper4": Array [],
    "lLeftArrow": Array [],
    "lLowerRamp": Array [],
    "lMagnaSaveStatus": Array [
      "Green",
    ],
    "lMainTargetArrow": Array [],
    "lMiniReady": Array [
      "Green",
    ],
    "lPopperStatus": Array [
      "Green",
    ],
    "lPower1": Array [
      "Orange",
    ],
    "lPower2": Array [
      "Orange",
    ],
    "lPower3": Array [
      "Orange",
    ],
    "lPower4": Array [
      "Orange",
    ],
    "lRampArrow": Array [],
    "lRampShowCards": Array [
      "White",
    ],
    "lRampStartMb": Array [],
    "lShooterLaneArrow": Array [],
    "lShooterShowCards": Array [
      "White",
    ],
    "lShooterStartHand": Array [
      Array [
        "Green",
        "fl",
      ],
    ],
    "lSideShotArrow": Array [],
    "lSideTargetArrow": Array [],
    "lSpinnerArrow": Array [],
    "lUpperLaneArrow": Array [],
    "lUpperTargetArrow": Array [],
    "leftBank": false,
    "leftGate": false,
    "leftMagnet": false,
    "lockPost": false,
    "magnetPost": false,
    "miniBank": false,
    "miniDiverter": false,
    "miniEject": false,
    "miniFlipperEnable": false,
    "outhole": false,
    "popper": false,
    "rampUp": false,
    "realRightBank": false,
    "right1": false,
    "right2": false,
    "right3": false,
    "right4": false,
    "right5": false,
    "rightBank": false,
    "rightGate": true,
    "shooterDiverter": true,
    "troughRelease": false,
    "upper2": false,
    "upper3": false,
    "upperEject": false,
    "upperMagnet": false,
  },
  "state": Object {
    "children": Array [
      Object {
        "children": Array [],
        "name": "DropBank104",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank105",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank106",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank107",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank108",
        "state": Object {},
      },
      Object {
        "children": Array [],
        "name": "DropBank109",
        "state": Object {},
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "name": "EosPulse111",
            "state": Object {},
          },
        ],
        "name": "MachineOverrides110",
        "state": Object {},
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "name": "ClearHoles114",
                "state": Object {},
              },
              Object {
                "children": Array [],
                "name": "Poker115",
                "state": Object {
                  "bet": 100,
                  "closeShooter": false,
                  "dealerCardsUsed": Array [
                    Object {
                      "flipped": false,
                      "num": 9,
                      "suit": "h",
                    },
                    Object {
                      "flipped": false,
                      "num": 9,
                      "suit": "d",
                    },
                    Object {
                      "flipped": undefined,
                      "num": 4,
                      "suit": "c",
                    },
                    Object {
                      "flipped": false,
                      "num": 4,
                      "suit": "h",
                    },
                  ],
                  "dealerHand": Array [
                    Object {
                      "flipped": undefined,
                      "num": 3,
                      "suit": "h",
                    },
                    Object {
                      "flipped": undefined,
                      "num": 4,
                      "suit": "c",
                    },
                    Object {
                      "flipped": false,
                      "num": 9,
                      "suit": "h",
                    },
                    Object {
                      "flipped": false,
                      "num": 5,
                      "suit": "s",
                    },
                    Object {
                      "flipped": false,
                      "num": 9,
                      "suit": "d",
                    },
                    Object {
                      "flipped": false,
                      "num": 4,
                      "suit": "h",
                    },
                    Object {
                      "flipped": undefined,
                      "num": 2,
                      "suit": "c",
                    },
                  ],
                  "dealerHandDesc": "Two Pair",
                  "newMbs": Array [],
                  "newModes": Array [],
                  "playerCardsUsed": Array [
                    Object {
                      "num": 13,
                      "suit": "d",
                    },
                    Object {
                      "num": 13,
                      "suit": "h",
                    },
                  ],
                  "playerHand": Array [
                    Object {
                      "num": 7,
                      "suit": "s",
                    },
                    Object {
                      "num": 11,
                      "suit": "s",
                    },
                    Object {
                      "num": 13,
                      "suit": "d",
                    },
                    Object {
                      "num": 3,
                      "suit": "d",
                    },
                    Object {
                      "num": 13,
                      "suit": "h",
                    },
                    Object {
                      "num": 1,
                      "suit": "s",
                    },
                    Object {
                      "num": 9,
                      "suit": "c",
                    },
                  ],
                  "playerHandDesc": "Pair",
                  "playerWins": false,
                  "pot": 1000,
                  "slots": Array [
                    Object {
                      "num": 1,
                      "suit": "d",
                    },
                    Object {
                      "num": 13,
                      "suit": "c",
                    },
                    Object {
                      "num": 13,
                      "suit": "s",
                    },
                    Object {
                      "num": 8,
                      "suit": "h",
                    },
                    Object {
                      "num": 5,
                      "suit": "h",
                    },
                    Object {
                      "num": 4,
                      "suit": "s",
                    },
                    Object {
                      "num": 5,
                      "suit": "d",
                    },
                    Object {
                      "num": 3,
                      "suit": "s",
                    },
                    Object {
                      "num": 8,
                      "suit": "c",
                    },
                    Object {
                      "num": 10,
                      "suit": "s",
                    },
                    Object {
                      "num": 11,
                      "suit": "h",
                    },
                    Object {
                      "num": 8,
                      "suit": "s",
                    },
                    Object {
                      "num": 10,
                      "suit": "h",
                    },
                    Object {
                      "num": 12,
                      "suit": "d",
                    },
                    Object {
                      "num": 8,
                      "suit": "d",
                    },
                    Object {
                      "num": 10,
                      "suit": "d",
                    },
                    Object {
                      "num": 12,
                      "suit": "s",
                    },
                    Object {
                      "num": 1,
                      "suit": "h",
                    },
                    Object {
                      "num": 9,
                      "suit": "s",
                    },
                    Object {
                      "num": 1,
                      "suit": "c",
                    },
                  ],
                  "step": 8,
                },
              },
              Object {
                "children": Array [],
                "name": "Spinner116",
                "state": Object {
                  "comboMult": 1,
                  "rounds": 0,
                  "score": 10,
                },
              },
              Object {
                "children": Array [],
                "name": "LeftOrbit117",
                "state": Object {
                  "comboMult": 1,
                  "rounds": 1,
                  "score": 20000,
                },
              },
              Object {
                "children": Array [],
                "name": "PlayerOverrides118",
                "state": Object {},
              },
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter121",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter122",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter123",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter124",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter125",
                        "state": Object {},
                      },
                      Object {
                        "children": Array [],
                        "name": "DropBankResetter126",
                        "state": Object {},
                      },
                    ],
                    "name": "ResetAnyDropOnComplete120",
                    "state": Object {},
                  },
                ],
                "name": "Ball119",
                "state": Object {
                  "miniReady": true,
                },
              },
            ],
            "name": "Player113",
            "state": Object {
              "chips": 4,
              "closeShooter": false,
              "curMbMode": undefined,
              "laneChips": Array [
                true,
                false,
                false,
                false,
              ],
              "mbsQualified": Array [],
              "modesQualified": Array [],
              "noMode": undefined,
              "poker": "Poker115",
              "rampUp": true,
              "score": 26000,
            },
          },
        ],
        "name": "Game112",
        "state": Object {
          "ballNum": 1,
        },
      },
    ],
    "name": "Machine103",
    "state": Object {
      "lastSwitchHit": Switch {
        "_state": true,
        "column": 6,
        "lastChange": 16474,
        "lastClosed": 16474,
        "lastOpened": undefined,
        "minOffTime": 25,
        "minOnTime": 25,
        "name": "upper eject",
        "row": 7,
      },
      "lockDown": false,
      "miniDown": false,
    },
  },
}
`;
